--- a/resources/assm_align_cfg.yml
+++ b/resources/assm_align_cfg.yml
@@ -14,12 +14,12 @@ input_files:
     align_rpt: data/GRCh38-GRCh37.report.txt
 params:
   exclude_mt: yes
+  make_bed: yes
 output_files:
   #set file name to no to exclude
   assm1:
     stats: stats/GRCh37-GRCh38_alignment_stats.txt
     no_hit_bed: bed/GRCh37-GRCh38_no_hit.bed
-    ungap_no_hit_bed: bed/GRCh37-GRCh38_ungap_no_hit.bed
     collapse_bed: bed/GRCh37-GRCh38_collapse.bed #sp- both paralogous and allelic for now
     expand_bed: bed/GRCh37-GRCh38_expansion.bed 
     inv_bed: bed/GRCh37-GRCh38_inv.bed
@@ -27,7 +27,6 @@ output_files:
   assm2:
     stats: stats/GRCh38-GRCh37_alignment_stats.txt
     no_hit_bed: bed/GRCh38-GRCh37_no_hit.bed
-    ungap_no_hit_bed: bed/GRCh38-GRCh37_ungap_no_hit.bed
     collapse_bed: bed/GRCh38-GRCh37_collapse.bed #sp- both paralogous and allelic for now
     expand_bed: bed/GRCh38-GRCh37_expansion.bed 
     inv_bed: bed/GRCh38-GRCh37_inv.bed
