Now supporting ungap nohit bed and stats. An ungap loc means >50% non-N bases

--- a/resources/assm_align_cfg.yml
+++ b/resources/assm_align_cfg.yml
@@ -21,13 +21,15 @@ output_files:
     stats: stats/GRCh37-GRCh38_alignment_stats.txt
     top_ten: stats/GRCh37-GRCh38_top_ten.txt
     no_hit_bed: bed/GRCh37-GRCh38_no_hit.bed
+    ungap_nohit_bed: bed/GRCh37-GRCh38_ungap_no_hit.bed
     collapse_bed: bed/GRCh37-GRCh38_collapse.bed #sp- both paralogous and allelic for now
     expand_bed: bed/GRCh37-GRCh38_expansion.bed
     inv_bed: bed/GRCh37-GRCh38_inv.bed
     mix_bed: bed/GRCh37-GRCh38_mix.bed
   assm2:
     stats: stats/GRCh38-GRCh37-alignment_stats.txt
-    top_ten: stats/GRCh38-GRCh38_top_ten.txt
+    top_ten: stats/GRCh38-GRCh37_top_ten.txt
+    ungap_nohit_bed: bed/GRCh38-GRCh37_ungap_nohit.bed
     no_hit_bed: bed/GRCh38-GRCh37_no_hit.bed
     collapse_bed: bed/GRCh38-GRCh37_collapse.bed #sp- both paralogous and allelic for now
     expand_bed: bed/GRCh38-GRCh37_expansion.bed
